Fix: The extra and media section of a work should be visible even on small viewport

--- a/puppetplays-web/components/Work/workSummary.module.scss
+++ b/puppetplays-web/components/Work/workSummary.module.scss
@@ -173,6 +173,7 @@
 
   .media {
     grid-area: media;
+    display: block;
   }
 
   .body {
@@ -181,5 +182,6 @@
 
   .extra {
     grid-area: extra;
+    display: block;
   }
 }
